se modifico logo

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="carousel-item" style="background-image: url('img/2.jpg');">
           <div class="carousel-caption d-none d-md-block">
             <h2 class="display-4">Creando nuevas formas de interacción</h2>
-            <p class="lead">ENTRE PERSONAS, PROCESOS Y TECNOLOGÍA</p>
+            <p class="lead">Entre Personas, Procesos y Tecnología.</p>
           </div>
         </div>
         <!-- Slide Four - Set the background image for this slide in the line below -->
@@ -541,6 +541,11 @@
                 <div class="form-group">
                   <input class="form-control" id="email" type="email" placeholder="Email *" required="required"
                     data-validation-required-message="Por favor ingrese su Correo Electrónico.">
+                  <p class="help-block text-danger"></p>
+                </div>
+                <div class="form-group">
+                  <input class="form-control" id="phone" type="tel" placeholder="Telefono *" required="required"
+                    data-validation-required-message="Por favor ingrese su Número Telefónico.">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
